Classes:
  - Air Raider can equip anything in all three of his slots.

Weapons Changes:
RANGER
  - AF99-ST gets a 2.5x scope, increased clip capcity to 28,
    and reload time reduced to 2.5 seconds.
  - Nova Buster ZD can reload in the background. This takes 180 seconds.
  - Lysander Z's rate of fire increased to 0.5/s from 0.3/s

WING DIVER
  - SIG LAZR penetrates through enemies
  - Luxard's energy cost halved, it momentum inheritance cut from 5 to 1

New Weapons:
RANGER
  - AF-W  | Assault Rifle
  - Dragon's Breath | Shotgun
  - Super Goliath | Rocket Launcher

WING DIVER
  - Electric Rapier | Short-Range
  - Electric Rapier 2 | Short-Range
  - Electric Rapier 3 | Short-Range
  - Raijin Z | Sniper Weapons
  - Gleipnir ? | Special Weapons
  - Gleipnir HR | Special Weapons
  - Gleipnir-FF | Special Wewapons

FENCER
  - Striker DV | CC Strikers
  - Eruption Haken | CC Strikers
  - Rapid Powerdyne | Artilery
  - Maximum Powerdyne | Artillery

AIR RAIDER
  - Naplm Plan A | Calling for Support
  - Naplm Plan B | Calling for Support
  - Naplm Plan C | Calling for Support