@@ -22,6 +22,7 @@ WING DIVER
   - Electric Rapier | Short-Range
   - Electric Rapier 2 | Short-Range
   - Electric Rapier 3 | Short-Range
+  - Grom-Z | Mid-Range Electric
   - Raijin Z | Sniper Weapons
   - Gleipnir ? | Special Weapons
   - Gleipnir HR | Special Weapons
